<resources>
  <string name="app_name" translatable="false">Tack</string>
  <string name="app_developer" translatable="false">Patrick Zedler</string>
  <string name="app_mail" translatable="false">dev@patrickzedler.com</string>
  <string name="app_website" translatable="false">https://patrickzedler.com</string>
  <string name="app_vending_dev" translatable="false">https://play.google.com/store/apps/dev?id=5870283381366287608</string>
  <string name="app_vending_app" translatable="false">https://play.google.com/store/apps/details?id=xyz.zedler.patrick.tack</string>
  <string name="app_vending_key" translatable="false">https://play.google.com/store/apps/details?id=xyz.zedler.patrick.tack.unlock</string>
  <string name="app_github" translatable="false">https://github.com/patzly/tack-android/</string>
  <string name="app_translate" translatable="false">https://app.transifex.com/patzly/tack-android/</string>
  <string name="app_privacy" translatable="false">https://patrickzedler.com/tack/privacy-policy-tack/</string>
  <string name="title_feedback">Feedback</string>
  <string name="title_about">About</string>
  <string name="title_help">Help</string>
  <string name="title_licenses">Open source licenses</string>
  <string name="title_settings">Settings</string>
  <string name="title_notification_channel">Metronome service</string>
  <string name="title_options">Options</string>
  <string name="title_general">General</string>
  <string name="title_metronome">Metronome</string>
  <string name="title_controls">Controls</string>
  <string name="title_logcat">Logcat</string>
  <string name="title_songs">Song library</string>
  <string name="title_songs_short">Songs</string>
  <string name="title_song_details">Song details</string>
  <string name="label_bpm_value">%1$d bpm</string>
  <string name="label_bpm">bpm</string>
  <string name="label_ms">%1$s ms</string>
  <string name="label_db_signed">%1$s dB</string>
  <string name="label_tempo">Tempo</string>
  <string name="label_tempo_keyboard">Keyboard</string>
  <string name="label_tempo_tap">Tap</string>
  <string name="label_tempo_instant">Apply instantly</string>
  <string name="label_tempo_largo">Largo</string>
  <string name="label_tempo_larghetto">Larghetto</string>
  <string name="label_tempo_adagio">Adagio</string>
  <string name="label_tempo_andante">Andante</string>
  <string name="label_tempo_moderato">Moderato</string>
  <string name="label_tempo_allegro">Allegro</string>
  <string name="label_tempo_presto">Presto</string>
  <string name="label_tempo_prestissimo">Prestissimo</string>
  <string name="label_tempo_input_help">Values from %1$d to %2$d</string>
  <string name="label_beat_mode_all">Sound and vibration</string>
  <string name="label_beat_mode_sound">Sound only</string>
  <string name="label_beat_mode_vibration">Vibration only</string>
  <string name="label_part_name">Part name</string>
  <string name="label_part_unnamed">Part %1$d</string>
  <string name="label_part_current">Part %1$d: %2$s</string>
  <string name="label_part_edit">Edit part %1$d</string>
  <string name="label_part_no_duration">No duration</string>
  <string name="label_part_duration_notification">%1$s / %2$s</string>
  <plurals name="label_parts_count">
    <item quantity="one">%1$d part</item>
    <item quantity="other">%1$d parts</item>
  </plurals>
  <string name="label_song_options">Additional options</string>
  <string name="label_song_options_dialog">Song options</string>
  <string name="label_song_looped">Looped</string>
  <string name="label_song_looped_description">Restart song when at end</string>
  <string name="label_song_not_looped">Not looped</string>
  <string name="label_song_speed">Practice tempo</string>
  <string name="label_song_speed_description">Play parts at %1$d%% of their original tempo</string>
  <string name="label_song_speed_description_original">Play parts at their original tempo</string>
  <string name="label_song_speed_short">%1$d%% practice tempo</string>
  <string name="label_song_speed_original">Original tempo</string>
  <string name="label_sort_name">Name</string>
  <string name="label_sort_last_played">Last played</string>
  <string name="label_sort_last_played_date">Last played %1$s</string>
  <string name="label_sort_never_played">Never played</string>
  <string name="label_sort_most_played">Most played</string>
  <plurals name="label_sort_most_played_times">
    <item quantity="one">Played %1$d time</item>
    <item quantity="other">Played %1$d times</item>
  </plurals>
  <string name="label_song_name">Song name</string>
  <string name="label_song_name_help">Name must be unique</string>
  <string name="label_song_name_used">Name already used</string>
  <string name="widget_songs_preview_title1">Bach Brandenburg Concerto No. 2</string>
  <string name="widget_songs_preview_title2">Debussy Syrinx</string>
  <string name="widget_songs_preview_title3">Mozart Serenade No. 13</string>
  <string name="widget_songs_preview_parts1">3 parts</string>
  <string name="widget_songs_preview_parts2">1 part</string>
  <string name="widget_songs_preview_parts3">4 parts</string>
  <string name="action_back">Back</string>
  <string name="action_close">Close</string>
  <string name="action_apply">Apply</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_increase">Increase</string>
  <string name="action_decrease">Decrease</string>
  <string name="action_play">Play</string>
  <string name="action_play_stop">Play/Stop</string>
  <string name="action_stop">Stop</string>
  <string name="action_add_beat">Add beat</string>
  <string name="action_remove_beat">Remove beat</string>
  <string name="action_add_sub">Add subdivision</string>
  <string name="action_remove_sub">Remove subdivision</string>
  <string name="action_beat_mode">Beat mode</string>
  <string name="action_send_feedback">Send feedback</string>
  <string name="action_reset">Reset</string>
  <string name="action_deactivate">Deactivate</string>
  <string name="action_recommend">Recommend</string>
  <string name="action_recommend_description">Tell your friends about Tack</string>
  <string name="action_email">Send email</string>
  <string name="action_email_description">Contact the developer</string>
  <string name="action_rate">Rate on Google Play</string>
  <string name="action_rate_description">Share your thoughts</string>
  <string name="action_support">Support the development</string>
  <string name="action_support_description">Buy the unlock app</string>
  <string name="action_issue">Open new issue on GitHub</string>
  <string name="action_issue_description">Report bugs or suggest features</string>
  <string name="action_retry">Retry</string>
  <string name="action_logcat">Show logcat</string>
  <string name="action_copy_to_clipboard">Copy to clipboard</string>
  <string name="action_reload">Reload</string>
  <string name="action_change_tempo">Change tempo</string>
  <string name="action_add_song">Add song</string>
  <string name="action_sort_by">Sort by</string>
  <string name="action_backup_restore">Backup/restore</string>
  <string name="action_more">More</string>
  <string name="msg_feedback">A great app requires a lot of time and lives from the feedback of its users.</string>
  <string name="msg_feedback_contact">Do you have any wishes, comments or questions? Contact me! Otherwise, I would be very happy about a nice review in the Play Store.</string>
  <string name="help_tempo_change">How can I change tempo?</string>
  <string name="help_tempo_change_answer">To change the tempo, you can drag and rotate the tempo picker in the center of the main page or tap on the buttons on the left and the right of the circle.\nBy tapping the tempo picker, you can open a dialog to set the tempo by tapping in BPM or using keyboard input.</string>
  <string name="help_time_signature">How do I set the time signature?</string>
  <string name="help_time_signature_answer">Look at the first number of your time signature and set the beats in Tack accordingly. That means 4 beats for 4/4, 2 for 2/2 and so on. 6/8 is a bit special, here you use 2 beats with optionally 3 subdivisions because only the 1st and the 4th eights are downbeats.\nAdditionally you can change the emphasis of beats by tapping on them. In options, you also can select a swing percentage, which automatically sets the subdivisions for you.</string>
  <string name="help_swing">How do I disable swing?</string>
  <string name="help_swing_answer">If you have enabled swing in the options, all Tack does is to set the subdivisions for you. To disable swing, simply set the subdivisions manually to your liking.</string>
  <string name="help_song_library">How does the song library work?</string>
  <string name="help_song_library_answer">The song library is a collection of metronome configurations that you can save and apply. To save your current configuration, simply open the song library and create a new song. The current configuration will be added to the parts list where you can further adjust it. After you gave the song a name, don’t forget to save your result with a tap on the disk icon in the top right corner.</string>
  <string name="help_song_picker">How does the song picker work?</string>
  <string name="help_song_picker_answer">All songs from your song library are displayed in the song picker on the main page, but you can open a full-screen list if you want. The order depends on your choice in the menu. To apply a song, simply tap on it. You can also jump to a specific part of a song by tapping on the current part below the song or by using the skip buttons.\nIf you want to switch back to the configuration you had before selecting a song, tap the × next to the song name.</string>
  <string name="help_song_part">Why does the song not switch to the next part?</string>
  <string name="help_song_part_answer">To switch to the next part of a song automatically, each part needs to have a duration set. If you don’t set a duration, the part is considered to be infinite.\nTo set a duration, simply tap on the current song to open song details and set the part’s duration by tapping on the edit icon of the part. Don’t forget to save your changes!</string>
  <string name="help_notification_displays">Why is the metronome service notification displayed when I leave the app?</string>
  <string name="help_notification_displays_answer">If you haven’t enabled “Permanent notification” in settings, the notification is necessary for the metronome service to stay alive when the app is in background.\nThe service manages playback and keeps track of real-time data like timer or elapsed time to separate playback from the app interface.\nYou can move the service to the background by tapping “Stop”, but this no longer guarantees that it isn’t killed by the system. This may result in resets of timer and elapsed time until the service is in foreground again.\nYou can also enable permanent notification in settings to always have access to start/stop in the notifications area.</string>
  <string name="help_notification_disappears">Why does the metronome service notification disappear when I close the app?</string>
  <string name="help_notification_disappears_answer">When you close the app from recent apps, the metronome service is stopped and the notification disappears. This is intended behavior to save battery and resources.\nIf you want to permanently keep the notification for start/stop access, you can enable “Permanent notification” in settings and don’t dismiss the app from recent apps.</string>
  <string name="help_translation">How can I get Tack for my language?</string>
  <string name="help_translation_answer">Translations for Tack are managed on Transifex, where users like you can help translate the app! Please visit Tack on GitHub for more information or jump directly into the translation process:</string>
  <string name="about_translation" translatable="false">Transifex</string>
</resources>