<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:text="@string/title_feedback"
        android:textAppearance="@style/TextAppearance.Tack.BottomSheet.Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAlignment="viewStart"
        android:text="@string/msg_feedback"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.Tack.BottomSheet.Text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_feedback_rate"
        style="@style/Widget.Tack.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_rate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_feedback_send_feedback"
        style="@style/Widget.Tack.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_send_feedback" />

</LinearLayout>